crates/format-docx/tests/snapshots/read_preserve__shadow_academic_heading_hierarchy.snap
---
source: crates/format-docx/tests/read_preserve.rs
expression: shadow_summary(HEADING_HIERARCHY)
---
part_names:
  - "[Content_Types].xml"
  - _rels/.rels
  - docProps/app.xml
  - docProps/core.xml
  - docProps/custom.xml
  - word/_rels/document.xml.rels
  - word/document.xml
  - word/fontTable.xml
  - word/numbering.xml
  - word/settings.xml
  - word/styles.xml
  - word/theme/theme1.xml
part_count: 12
document_xml_len: 3931
indexed_paragraph_count: 11
