crates/format-docx/tests/snapshots/read_preserve__shadow_equations_display_math.snap
---
source: crates/format-docx/tests/read_preserve.rs
expression: shadow_summary(EQUATIONS_DISPLAY)
---
part_names:
  - "[Content_Types].xml"
  - _rels/.rels
  - docProps/app.xml
  - docProps/core.xml
  - docProps/custom.xml
  - word/_rels/document.xml.rels
  - word/document.xml
  - word/fontTable.xml
  - word/settings.xml
  - word/styles.xml
  - word/theme/theme1.xml
part_count: 11
document_xml_len: 2827
indexed_paragraph_count: 6
