crates/format-docx/tests/snapshots/read_preserve__shadow_footnotes_single_footnote.snap
---
source: crates/format-docx/tests/read_preserve.rs
expression: shadow_summary(SINGLE_FOOTNOTE)
---
part_names:
  - "[Content_Types].xml"
  - _rels/.rels
  - docProps/app.xml
  - docProps/core.xml
  - word/_rels/document.xml.rels
  - word/document.xml
  - word/fontTable.xml
  - word/footnotes.xml
  - word/settings.xml
  - word/styles.xml
  - word/theme/theme1.xml
part_count: 11
document_xml_len: 1618
indexed_paragraph_count: 1
